update profile in progress

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,7 @@ PORT = 3001
 JWT_SECRET = myscretkey
 
 NODE_ENV = development
+
+CLOUDINARY_CLOUD_NAME = dbrsjge05
+CLOUDINARY_API_KEY = 242816764328853
+CLOUDINARY_API_SECRET = 9iAvQxGMEHaPcfjYYl-VhsGsbQs
