--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,42 @@
 {
 
   "type": "module",
+
   "dependencies": {
+
     "bcryptjs": "^3.0.2",
+
     "cloudinary": "^2.6.1",
+
     "cookie-parser": "^1.4.7",
+
+    "cors": "^2.8.5",
+
     "dotenv": "^16.5.0",
+
     "express": "^5.1.0",
+
     "jsonwebtoken": "^9.0.2",
+
     "mongoose": "^8.15.1",
+
     "socket.io": "^4.8.1",
+
     "y": "^0.3.2"
+
   },
+
   "scripts": {
+
     "dev": "nodemon src/index.js"
+
   },
+
   "devDependencies": {
+
     "nodemon": "^3.1.10"
+
   }
+
 }
+
